[gd_scene load_steps=20 format=3 uid="uid://da058yqr4j5g7"]

[ext_resource type="Texture2D" uid="uid://cf0bwufjaesfi" path="res://Exterior/Speedometer/Panel2.png" id="1_61t5y"]
[ext_resource type="Script" path="res://panel_pribor.gd" id="1_aa6de"]
[ext_resource type="Texture2D" uid="uid://bii6qfwuypmlr" path="res://Exterior/Speedometer/centr.png" id="2_rvqq0"]
[ext_resource type="Texture2D" uid="uid://bgdm15i2gpfky" path="res://Exterior/Speedometer/StrelkaTahometr.png" id="3_q4ess"]
[ext_resource type="Texture2D" uid="uid://dhp4hnxge8k0x" path="res://Exterior/Speedometer/CentrSpeed.png" id="4_aukgy"]
[ext_resource type="Texture2D" uid="uid://dibx24jnol6cs" path="res://Exterior/Speedometer/StrelkaSpeedometr.png" id="5_87xkg"]
[ext_resource type="Texture2D" uid="uid://lnbl8al1inlk" path="res://Exterior/Speedometer/akb.png" id="7_31vvt"]
[ext_resource type="Texture2D" uid="uid://c1p4fayvda3qy" path="res://Exterior/Speedometer/StrelkaToplivo.png" id="7_c8iyb"]
[ext_resource type="Texture2D" uid="uid://bjp4u04237kka" path="res://Exterior/Speedometer/chek.png" id="8_a4b6c"]
[ext_resource type="Texture2D" uid="uid://lb561ejfhins" path="res://Exterior/Speedometer/masl.png" id="9_cva2r"]
[ext_resource type="Texture2D" uid="uid://bfhfeep5ysgmk" path="res://Exterior/Speedometer/airbag.png" id="10_cwfq6"]
[ext_resource type="Texture2D" uid="uid://bvlw53dlu6d4" path="res://Exterior/Speedometer/abs.png" id="11_82o24"]
[ext_resource type="Texture2D" uid="uid://ntj5fidf00nn" path="res://Exterior/Speedometer/toplivo.png" id="12_o5ufv"]
[ext_resource type="AudioStream" uid="uid://covufhjxse30m" path="res://Sound/starter.mp3" id="14_0inuf"]
[ext_resource type="AudioStream" uid="uid://dxijd2gq0wnmw" path="res://Sound/motor2.wav" id="14_34luo"]
[ext_resource type="AudioStream" uid="uid://b0jpx473b7mkm" path="res://Sound/dvigat.wav" id="14_t2wwf"]
[ext_resource type="AudioStream" uid="uid://dhe2mag3uxv6a" path="res://Sound/–î–≤–∏–≥–∞—Ç–µ–ª—å —Ç—Ä–æ–∏—Ç üöó - –∑–≤—É–∫ —Ç—Ä–æ—è—â–µ–≥–æ –¥–≤–∏–≥–∞—Ç–µ–ª—è, –∞–≤—Ç–æ–º–æ–±–∏–ª—è –∏ —à—É–º –¥–≤–∏–≥–∞—Ç–µ–ª—è –∫–æ—Ç–æ—Ä—ã–π —Ç—Ä–æ–∏—Ç ‚öôÔ∏è (256  kbps).mp3" id="14_thav5"]
[ext_resource type="PackedScene" uid="uid://0qyw7psmlv7" path="res://car_inspection.tscn" id="18_2bie1"]

[sub_resource type="LabelSettings" id="LabelSettings_u50a7"]
font_size = 26

[node name="PanelPribor" type="Node2D"]
script = ExtResource("1_aa6de")

[node name="Panel" type="Sprite2D" parent="."]
position = Vector2(636.781, 315.5)
scale = Vector2(0.541209, 0.541209)
texture = ExtResource("1_61t5y")

[node name="Centr" type="Sprite2D" parent="Panel"]
position = Vector2(-609.284, 40.8737)
rotation = -0.95644
scale = Vector2(0.992476, 0.992476)
texture = ExtResource("2_rvqq0")

[node name="StrelkaTahometr" type="Sprite2D" parent="Panel/Centr"]
position = Vector2(-158.723, -82.7519)
scale = Vector2(0.972763, 0.972763)
texture = ExtResource("3_q4ess")

[node name="CentrSpeed" type="Sprite2D" parent="Panel"]
position = Vector2(-17.8601, 0.509329)
rotation = -2.81871
scale = Vector2(0.989827, 0.989827)
texture = ExtResource("4_aukgy")

[node name="StrelkaSpeedometr" type="Sprite2D" parent="Panel/CentrSpeed"]
position = Vector2(137.422, -132.243)
scale = Vector2(1.11067, 1.11067)
texture = ExtResource("5_87xkg")

[node name="Temp" type="Sprite2D" parent="Panel"]
position = Vector2(804.162, 135.807)
rotation = -0.837758
scale = Vector2(0.832343, 0.832343)
texture = ExtResource("4_aukgy")

[node name="StrelkaTemp" type="Sprite2D" parent="Panel/Temp"]
position = Vector2(-126.534, -22.1989)
scale = Vector2(1.41614, 1.41614)
texture = ExtResource("7_c8iyb")

[node name="launch" type="Button" parent="."]
offset_left = 365.0
offset_top = 617.0
offset_right = 468.0
offset_bottom = 654.0
text = "–ó–∞–∂–∏–≥–∞–Ω–∏–µ"

[node name="Gas" type="Button" parent="."]
offset_left = 791.0
offset_top = 614.0
offset_right = 894.0
offset_bottom = 652.0
text = "–ì–∞–∑
"

[node name="Label" type="Label" parent="."]
offset_left = 571.0
offset_top = 392.0
offset_right = 682.0
offset_bottom = 431.0
text = "000000"
label_settings = SubResource("LabelSettings_u50a7")
horizontal_alignment = 1

[node name="Akb" type="Sprite2D" parent="."]
position = Vector2(480, 506)
scale = Vector2(0.677778, 0.677778)
texture = ExtResource("7_31vvt")

[node name="Chek" type="Sprite2D" parent="."]
position = Vector2(756.546, 506.375)
scale = Vector2(0.163173, 0.163173)
texture = ExtResource("8_a4b6c")

[node name="Masl" type="Sprite2D" parent="."]
position = Vector2(619.889, 506)
scale = Vector2(0.195898, 0.245454)
texture = ExtResource("9_cva2r")

[node name="Airbag" type="Sprite2D" parent="."]
position = Vector2(865, 507)
scale = Vector2(0.627778, 0.627778)
texture = ExtResource("10_cwfq6")

[node name="Abs" type="Sprite2D" parent="."]
position = Vector2(812, 507)
scale = Vector2(0.178144, 0.178143)
texture = ExtResource("11_82o24")

[node name="Toplivo" type="Sprite2D" parent="."]
position = Vector2(552, 506)
scale = Vector2(0.190251, 0.190251)
texture = ExtResource("12_o5ufv")

[node name="TimerLampAirbag" type="Timer" parent="."]

[node name="TimerLampMasl" type="Timer" parent="."]

[node name="Timer0_5sek" type="Timer" parent="."]
wait_time = 0.068

[node name="TimerTemp" type="Timer" parent="."]

[node name="TimerLampChek" type="Timer" parent="."]

[node name="slomMotor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_thav5")

[node name="Motor2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_34luo")

[node name="Motor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_t2wwf")

[node name="Starter" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_0inuf")

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 1003.0
offset_top = 615.0
offset_right = 1156.0
offset_bottom = 648.0
text = "–î–∏–∞–≥–Ω–æ—Å—Ç–∏–∫–∞"

[node name="car_inspection" parent="." instance=ExtResource("18_2bie1")]
position = Vector2(36, 32)
scale = Vector2(0.8, 0.8)

[node name="diagnostics" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 402.0
offset_top = 156.0
offset_right = 839.0
offset_bottom = 410.0

[node name="ColorRect" type="ColorRect" parent="diagnostics"]
layout_mode = 0
offset_left = 4.0
offset_top = 1.0
offset_right = 440.0
offset_bottom = 255.0
color = Color(0, 0, 0, 1)

[node name="ColorRect2" type="ColorRect" parent="diagnostics"]
layout_mode = 0
offset_left = 18.0
offset_top = 58.0
offset_right = 422.0
offset_bottom = 240.0
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="Zagolovok" type="Label" parent="diagnostics"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 43.0
text = "–î–∏–∞–≥–Ω–æ—Å—Ç–∏–∫–∞ –∞–≤—Ç–æ–º–æ–±–∏–ª—è:"

[node name="VIN" type="Label" parent="diagnostics"]
layout_mode = 0
offset_left = 250.0
offset_top = 20.0
offset_right = 414.0
offset_bottom = 43.0

[node name="Zagolovok_error" type="Label" parent="diagnostics"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 60.0
offset_bottom = 83.0
text = "–û—à–∏–±–∫–∏"

[node name="error" type="Label" parent="diagnostics"]
layout_mode = 0
offset_left = 20.0
offset_top = 90.0
offset_right = 60.0
offset_bottom = 113.0

[node name="probeg" type="Label" parent="diagnostics"]
layout_mode = 0
offset_left = 20.0
offset_top = 125.0
offset_right = 60.0
offset_bottom = 148.0
text = "–ü—Ä–æ–±–µ–≥: "

[node name="motochas" type="Label" parent="diagnostics"]
layout_mode = 0
offset_left = 20.0
offset_top = 156.0
offset_right = 60.0
offset_bottom = 179.0
text = "–ú–æ—Ç–æ—á–∞—Å—ã: "

[node name="Label2" type="Label" parent="."]
offset_left = 64.0
offset_top = 32.0
offset_right = 104.0
offset_bottom = 55.0

[node name="CheckButton2" type="CheckButton" parent="."]
offset_left = 1005.0
offset_top = 650.0
offset_right = 1156.0
offset_bottom = 681.0
text = "–û—Å–º–æ—Ç—Ä –∞–≤—Ç–æ"

[connection signal="pressed" from="launch" to="." method="_on_launch_pressed"]
[connection signal="button_down" from="Gas" to="." method="_on_gas_button_down"]
[connection signal="button_up" from="Gas" to="." method="_on_gas_button_up"]
[connection signal="timeout" from="TimerLampAirbag" to="." method="_on_timer_lamp_timeout"]
[connection signal="timeout" from="TimerLampMasl" to="." method="_on_timer_lamp_masl_timeout"]
[connection signal="timeout" from="Timer0_5sek" to="." method="_on_timer_0_5_sek_timeout"]
[connection signal="timeout" from="TimerTemp" to="." method="_on_timer_temp_timeout"]
[connection signal="timeout" from="TimerLampChek" to="." method="_on_timer_lamp_chek_timeout"]
[connection signal="pressed" from="CheckButton" to="." method="_on_check_button_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="toggled" from="CheckButton2" to="." method="_on_check_button_2_toggled"]
